Use dumb-init and keep image size small
Signed-off-by: difince <dianaa@vmware.com>

--- a/cmd/Dockerfile
+++ b/cmd/Dockerfile
@@ -37,6 +37,9 @@ FROM mongo:4.2.0-bionic
 LABEL license='SPDX-License-Identifier: Apache-2.0' \
       copyright='Copyright (c) 2019: VMWare'
 
+RUN apt update && apt-get install dumb-init \
+ && rm -rf /var/cache/apt/* && rm -rf /var/lib/apt/lists/*
+
 #the default value will be changed to True, once the go-mod-secret is in use
 ARG EDGEX_SECURITY_SECRET_STORE_DEFAULT=false
 ENV EDGEX_SECURITY_SECRET_STORE=$EDGEX_SECURITY_SECRET_STORE_DEFAULT
@@ -48,7 +51,7 @@ COPY --from=builder /edgex-mongo/cmd/res/configuration.toml /edgex-mongo/cmd/res
 COPY --from=builder /edgex-mongo/cmd/res/security/configuration.toml /edgex-mongo/cmd/res/security/configuration.toml
 COPY --from=builder /edgex-mongo/bin/edgex-mongo-launch.sh /edgex-mongo/bin/
 
-ENTRYPOINT ["/edgex-mongo/bin/edgex-mongo-launch.sh"]
+ENTRYPOINT ["/usr/bin/dumb-init", "/edgex-mongo/bin/edgex-mongo-launch.sh"]
 
 
 
